# refalloc

./: .gitignore  CMakeLists.txt  README.md  refalloc.c  refalloc.h
tests/: refalloc_c11.c  refalloc_posix.c  refalloc_simple.c  refalloc_win32.c
